# 3d-physics

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  LEARNINGS.md  PROMPT.md  README.md
chapters/: CMakeLists.txt
chapters/01-hello-sdl3/: main.cpp
chapters/02-vectors/: main.cpp
chapters/03-matrices/: main.cpp
chapters/04-camera/: main.cpp
chapters/05-integration/: main.cpp
chapters/06-particles/: main.cpp
chapters/07-springs/: main.cpp
chapters/08-ropes/: main.cpp
chapters/09-cloth/: main.cpp
chapters/10-quaternions/: main.cpp
chapters/11-rigidbody/: main.cpp
chapters/12-broadphase/: main.cpp
chapters/13-narrowphase/: main.cpp
chapters/14-sat/: main.cpp
chapters/15-gjk/: main.cpp
chapters/16-impulses/: main.cpp
chapters/17-friction/: main.cpp
chapters/18-resting/: main.cpp
chapters/19-joints/: main.cpp
chapters/20-xpbd/: main.cpp
common/: CMakeLists.txt  app.cpp  app.hpp
common/math/: mat3.hpp  mat4.hpp  math.hpp  quat.hpp  scalar.hpp  vec3.hpp  vec4.hpp
common/render/: camera.hpp  color.hpp  debug_draw.cpp  debug_draw.hpp  mesh.cpp  mesh.hpp  renderer3d.cpp  renderer3d.hpp
docs/: index.html  style.css
docs/appendix/: a-math-cheatsheet.html  b-further-reading.html  c-engine-architecture.html
docs/chapters/: 01-hello-sdl3.html  02-vectors.html  03-matrices.html  04-camera.html  05-integration.html  06-particles.html  07-springs.html  08-ropes.html  09-cloth.html  10-quaternions.html  11-rigidbody.html  12-broadphase.html  13-narrowphase.html  14-sat.html  15-gjk.html  16-impulses.html  17-friction.html  18-resting.html  19-joints.html  20-xpbd.html
docs/js/: docs.js
memory/: 2026-07-12.md
physics/: CMakeLists.txt  aabb.hpp  broadphase.cpp  broadphase.hpp  collider.hpp  constraint.hpp  contact.hpp  forces.cpp  forces.hpp  gjk.cpp  gjk.hpp  inertia.hpp  joint.cpp  joint.hpp  narrowphase.cpp  narrowphase.hpp  particle.hpp  rigidbody.hpp  sat.cpp  sat.hpp  softbody.cpp  softbody.hpp  solver.cpp  solver.hpp  world.cpp  world.hpp
tests/: CMakeLists.txt  test_collision.cpp  test_integration.cpp  test_joints.cpp  test_main.cpp  test_math.cpp  test_physics.cpp  test_rigidbody.cpp  test_softbody.cpp  test_solver.cpp
